Moving to raspberry pi
Signed-off-by: Curt Meyers <cmeyers@boilerbots.com>

--- a/ros2/src/k1/config/poses.yaml
+++ b/ros2/src/k1/config/poses.yaml
@@ -1,25 +1,26 @@
-standing: [254, 50, 254,
-1, 211, # ch0
-1, 25,
-1, 109,
-1, 190,
-2, 144,
-1, 253,
-2, 243, # ch6 left arm
-0, 194, # ch7 right shoulder
-1, 181,
-1, 190,
-1, 181,
-1, 229,
-2, 192,
-2, 15,
-0, 212,
-1, 127,
-1, 211, # ch16 head
-1, 205,
-1, 205,
-1, 205,
-1, 130,
-1, 130,
-1, 205,
-1, 205]
+standing: [
+467,
+281,
+365,
+446,
+656,
+509,
+755,
+194,
+437,
+446,
+437,
+485,
+704,
+527,
+212,
+383,
+467,
+461,
+461,
+461,
+386,
+386,
+461,
+461,
+]
