Slow progress, working on serial driver
Signed-off-by: Curt Meyers <cmeyers@boilerbots.com>

--- a/ros2/src/k1_moveit/config/ros2_controllers.yaml
+++ b/ros2/src/k1_moveit/config/ros2_controllers.yaml
@@ -97,6 +97,7 @@ k1_robot_controller:
       - right_shoulder
       - right_upper
       - right_arm_lower
+      - head
     command_interfaces:
       - position
     state_interfaces:
