--- a/ros2/src/k1_control/package.xml
+++ b/ros2/src/k1_control/package.xml
@@ -20,7 +20,7 @@
   <depend>rcpputils</depend>
   <depend>realtime_tools</depend>
   <depend>trajectory_msgs</depend>
-  <depend>libserial</depend>
+  <depend>libserial-dev</depend>
   <depend>class_loader</depend>
 
   <exec_depend>controller_manager</exec_depend>
