--- a/ros2/src/k1_moveit/config/moveit_controllers.yaml
+++ b/ros2/src/k1_moveit/config/moveit_controllers.yaml
@@ -5,7 +5,7 @@ trajectory_execution:
   allowed_start_tolerance: 0.01
   trajectory_duration_monitoring: true
 
-moveit_manage_controllers: false
+moveit_manage_controllers: true
 moveit_controller_manager: moveit_simple_controller_manager/MoveItSimpleControllerManager
 
 moveit_simple_controller_manager:
