--- a/ros2/src/k1_moveit/config/joint_limits.yaml
+++ b/ros2/src/k1_moveit/config/joint_limits.yaml
@@ -1,95 +1,95 @@
 # joint_limits.yaml allows the dynamics properties specified in the URDF to be overwritten or augmented as needed
 
 # For beginners, we downscale velocity and acceleration limits.
-# You can always specify higher scaling factors (<= 1.0) in your motion requests.  # Increase the values below to 1.0 to always move at maximum speed.
-default_velocity_scaling_factor: 0.1
-default_acceleration_scaling_factor: 0.1
+# You can always specify higher scaling factors (<= 1.3.0) in your motion requests.  # Increase the values below to 1.0 to always move at maximum speed.
+default_velocity_scaling_factor: 3.0.1
+default_acceleration_scaling_factor: 3.0.1
 
 # Specific joint properties can be changed with the keys [max_position, min_position, max_velocity, max_acceleration]
 # Joint limits can be turned off with [has_velocity_limits, has_acceleration_limits]
 joint_limits:
-  head:
+  head_joint:
     has_velocity_limits: true
     max_velocity: 3.0
     has_acceleration_limits: true
-    max_acceleration: 6.0
-  left_ankle:
+    max_acceleration: 3.0
+  left_ankle_joint:
     has_velocity_limits: true
     max_velocity: 3.0
     has_acceleration_limits: true
-    max_acceleration: 6.0
-  left_arm_lower:
+    max_acceleration: 3.0
+  left_calf_joint:
     has_velocity_limits: true
     max_velocity: 3.0
     has_acceleration_limits: true
-    max_acceleration: 6.0
-  left_arm_upper:
+    max_acceleration: 3.0
+  left_hip_joint:
     has_velocity_limits: true
     max_velocity: 3.0
     has_acceleration_limits: true
-    max_acceleration: 6.0
-  left_calf:
+    max_acceleration: 3.0
+  left_knee_joint:
     has_velocity_limits: true
     max_velocity: 3.0
     has_acceleration_limits: true
-    max_acceleration: 6.0
-  left_hip:
+    max_acceleration: 3.0
+  left_lower_arm_joint:
     has_velocity_limits: true
     max_velocity: 3.0
     has_acceleration_limits: true
-    max_acceleration: 6.0
-  left_knee:
+    max_acceleration: 3.0
+  left_shoulder_joint:
     has_velocity_limits: true
     max_velocity: 3.0
     has_acceleration_limits: true
-    max_acceleration: 6.0
-  left_shoulder:
+    max_acceleration: 3.0
+  left_thigh_joint:
     has_velocity_limits: true
     max_velocity: 3.0
     has_acceleration_limits: true
-    max_acceleration: 6.0
-  left_thigh:
+    max_acceleration: 3.0
+  left_upper_arm_joint:
     has_velocity_limits: true
     max_velocity: 3.0
     has_acceleration_limits: true
-    max_acceleration: 6.0
-  right_ankle:
+    max_acceleration: 3.0
+  right_ankle_joint:
     has_velocity_limits: true
     max_velocity: 3.0
     has_acceleration_limits: true
-    max_acceleration: 6.0
-  right_arm_lower:
+    max_acceleration: 3.0
+  right_calf_joint:
     has_velocity_limits: true
     max_velocity: 3.0
     has_acceleration_limits: true
-    max_acceleration: 6.0
-  right_calf:
+    max_acceleration: 3.0
+  right_hip_joint:
     has_velocity_limits: true
     max_velocity: 3.0
     has_acceleration_limits: true
-    max_acceleration: 6.0
-  right_hip:
+    max_acceleration: 3.0
+  right_knee_joint:
     has_velocity_limits: true
     max_velocity: 3.0
     has_acceleration_limits: true
-    max_acceleration: 6.0
-  right_knee:
+    max_acceleration: 3.0
+  right_lower_arm_joint:
     has_velocity_limits: true
     max_velocity: 3.0
     has_acceleration_limits: true
-    max_acceleration: 6.0
-  right_shoulder:
+    max_acceleration: 3.0
+  right_shoulder_joint:
     has_velocity_limits: true
     max_velocity: 3.0
     has_acceleration_limits: true
-    max_acceleration: 6.0
-  right_thigh:
+    max_acceleration: 3.0
+  right_thigh_joint:
     has_velocity_limits: true
     max_velocity: 3.0
     has_acceleration_limits: true
-    max_acceleration: 6.0
-  right_upper:
+    max_acceleration: 3.0
+  right_upper_arm_joint:
     has_velocity_limits: true
     max_velocity: 3.0
     has_acceleration_limits: true
-    max_acceleration: 6.0
+    max_acceleration: 3.0
